--- a/training_model/random_forest.ipynb
+++ b/training_model/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -1921,7 +1921,7 @@
        "[100702 rows x 49 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1939,20 +1939,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df.rename(columns={'glyburide.metformin':'glyburide_metformin', 'glipizide.metformin':'glipizide_metformin',\n",
-    "       'glimepiride.pioglitazone':'glimepiride_pioglitazone', 'metformin.rosiglitazone':'metformin_rosiglitazone',\n",
-    "       'metformin.pioglitazone':'metformin_pioglitazone'}, inplace=True)\n"
+    "df.rename(columns={'glyburide.metformin':'glyburide_metformin', \n",
+    "                   'glipizide.metformin':'glipizide_metformin',\n",
+    "                   'glimepiride.pioglitazone':'glimepiride_pioglitazone', \n",
+    "                   'metformin.rosiglitazone':'metformin_rosiglitazone',\n",
+    "                   'metformin.pioglitazone':'metformin_pioglitazone'}, \n",
+    "          inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -1963,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -2036,15 +2039,6 @@
    "source": [
     "#### All columns are using encoded int's. Great! "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
